<resources>
    <string name="app_name">TP4_Grupo7_PA2v1</string>
    <string name="tab_text_1">Alta</string>
    <string name="tab_text_2">Modificación</string>
    <string name="tab_text_3">Listado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="alta_fragment">Alta</string>
    <string name="modificacion_fragment">Modificacion</string>
    <string name="listado_fragment">Listado</string>

    <string-array name="categorias">
        <item>C</item>
        <item>C++</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>VisualBasic</item>
    </string-array>

    <string name="id">ID</string>
    <string name="name_product">Nombre de producto</string>
    <string name="stock">Stock</string>
    <string name="category">Categoria</string>
    <string name="buscar">Buscar</string>
    <string name="agregar">Agregar</string>
    <string name="modificar">Modificar</string>



</resources>