<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentModificacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="#1E1E1E">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvId"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#9C9C9C"
                    android:paddingStart="10dp"
                    android:textSize="20dp"
                    android:gravity="center"
                    android:text="@string/id" />

                <EditText
                    android:id="@+id/etIdSeach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:inputType="number" />
            </TableRow>

            <Button
                android:id="@+id/btnSeach"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:text="@string/buscar"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tvNameModify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#9C9C9C"
            android:textSize="16dp"
            android:text="@string/name_product" />

        <EditText
            android:id="@+id/etNameModify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvStockModify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#9C9C9C"
            android:textSize="16dp"
            android:text="@string/stock" />

        <EditText
            android:id="@+id/etStockModify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvCategoriaModify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#9C9C9C"
            android:textSize="16dp"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/spinner_categoriasModify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategoria" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/btnModify"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/modificar"/>
        </TableRow>

    </LinearLayout>
</FrameLayout>